Bug 270538 - Solid::Networking::status() returning Solid::Networking::Status::Unknown since 4.6.2
Summary: Solid::Networking::status() returning Solid::Networking::Status::Unknown sinc...
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: libsolid (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Kevin Ottens
URL:
Keywords:
: 270692 270977 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-04-10 00:20 UTC by Jonathan Thomas
Modified: 2011-04-15 14:10 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.3
Sentry Crash Report:


Attachments
Fix Solid::Networking::status (728 bytes, patch)
2011-04-10 23:39 UTC, Lamarque V. Souza
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Thomas 2011-04-10 00:20:43 UTC
Version:           unspecified
OS:                Linux

Since the update to 4.6.2, Solid::Networking::status() is returning a "0", or the Unknown state. This is erroneous since the network is connected just fine (via Solid's NetworkManager backend).

I can reproduce this, and so have several other users of the Muon Package Manager, which due to a bug doesn't provide lenience for encountering the "Unknown" state: http://kubuntuforums.net/forums/index.php?topic=3116266.0

I've committed a fix to Muon to properly ignore the Unknown state, but this bug does have the effect of making the status() function a bit useless.

Reproducible: Always
Comment 1 Lamarque V. Souza 2011-04-10 23:39:52 UTC
Created attachment 58785 [details]
Fix Solid::Networking::status

Can you test the attached patch to check if it solves your problem?
Comment 2 Lamarque V. Souza 2011-04-10 23:41:09 UTC
By the way, the patch must be applied against kdelibs-4.6.2.
Comment 3 Lamarque V. Souza 2011-04-11 19:15:13 UTC
*** Bug 270692 has been marked as a duplicate of this bug. ***
Comment 4 Lamarque V. Souza 2011-04-15 06:49:13 UTC
Git commit 72cbad117d0abb4b47a5d00754ea465eda6c06b5 by Lamarque V. Souza.
Committed on 10/04/2011 at 23:34.
Pushed by lvsouza into branch 'KDE/4.6'.

Fix Solid::Networking::status() returning Solid::Networking::Unknown
sometimes.

BUG: 270538
FIXED-IN: 4.6.3

M  +1    -0    solid/solid/networking.cpp     

http://commits.kde.org/kdelibs/72cbad117d0abb4b47a5d00754ea465eda6c06b5
Comment 5 Lamarque V. Souza 2011-04-15 06:49:13 UTC
Git commit 8cbdd1447daa97f73eee9eb2dc3a5328f0525ebe by Lamarque V. Souza.
Committed on 10/04/2011 at 23:34.
Pushed by lvsouza into branch 'master'.

Fix Solid::Networking::status() returning Solid::Networking::Unknown
sometimes.

BUG: 270538
FIXED-IN: 4.6.3

M  +1    -0    solid/solid/networking.cpp     

http://commits.kde.org/kdelibs/8cbdd1447daa97f73eee9eb2dc3a5328f0525ebe
Comment 6 Jonathan Thomas 2011-04-15 14:10:31 UTC
*** Bug 270977 has been marked as a duplicate of this bug. ***