Fix Solid::Networking::status() returning Solid::Networking::Unknown sometimes.

BUG: 270538
FIXED-IN: 4.6.3